# spine

./: .gitignore  .travis.yml  README.md
spine-agent/: Makefile.am  configure.ac  core.h
spine-agent/doc/: Makefile.am  spine-agent.conf
spine-agent/etc/: spine-agent.conf
spine-agent/src/: Makefile  Makefile.am  apache.c  apache.h  buildpkg.c  buildpkg.h  commondata.h  core.c  core.h  database.c  database.h  dbdata.h  extractpkg.c  extractpkg.h  main.c  monitoring.c  monitoring.h  network.c  network.h  sysconfigdata.c  sysconfigdata.h  sysusers.c  sysusers.h  toolkit.c  toolkit.h
spine-agent/src/configdata/: buildpkg.c  dbdata.c  extractpkg.c
spine-agent/src/scopes/: apache.c  apache.h  db.c  db.h  sysusers.c
spine-agent/tests/: foo.sh
spine-web/: apache.php  databases.php  hostcheck.php  hostinfo.php  index.php  settings.php  sysusers.php
spine-web/css/: custom.css
spine-web/data/: htpasswd.json  vhost_options.json
spine-web/include/: config.php  dashboard.php  functions.php  smtp.php
spine-web/js/: addnewdb.js  addnewdbusers.js  dbusersPermissions.js  dual-list-box.min.js  hostcheck.js  monitoring.js  netstats.js  resetpass.js  rmdb.js  smtp_settings.js  spine.js  sysstats.js  sysuserEdit.js  sysuserRemove.js
spine-web/static/: diskChart.js
spine-web/static/themes/gentelella/css/: custom.css
spine-web/templates/: main.tpl
sql/: spine-db.sql  spine-schema-20170115.sql  spine-www-options.sql
src/: db.c  db.h  poc.c
